--- a/FIickFinder/Base.lproj/Main.storyboard
+++ b/FIickFinder/Base.lproj/Main.storyboard
@@ -22,15 +22,16 @@
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3XB-DD-94E">
                                         <rect key="frame" x="0.0" y="0.0" width="580" height="284"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Image View!!!!!!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7DU-7j-FcQ">
-                                        <rect key="frame" x="208" y="128" width="165" height="29"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search Image from Flickr" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7DU-7j-FcQ">
+                                        <rect key="frame" x="158" y="127" width="265" height="29"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstItem="3XB-DD-94E" firstAttribute="top" secondItem="dni-qB-rFI" secondAttribute="top" id="2Qf-nM-Lit"/>
                                     <constraint firstItem="7DU-7j-FcQ" firstAttribute="centerX" secondItem="dni-qB-rFI" secondAttribute="centerX" id="H1G-NE-EkE"/>
@@ -64,6 +65,9 @@
                                             <constraint firstAttribute="height" constant="42" id="WED-uT-FKr"/>
                                         </constraints>
                                         <state key="normal" image="SearchIcon"/>
+                                        <connections>
+                                            <action selector="latLongTitudeSearch:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pfw-MR-xH7"/>
+                                        </connections>
                                     </button>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="dPh-79-Jje">
                                         <rect key="frame" x="0.0" y="56" width="530" height="30"/>
